samples/_failures_safe/1761645043_61a8ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_835e7046.c: In function ‘main’:
./samples/SAFE/__tmp_835e7046.c:155:5: error: expected declaration or statement at end of input
  155 |     graph_add_edge(&g, b, c, 1);
      |     ^~~~~~~~~~~~~~
